Implemented functionality for the user to delete a service from his invoice if applicable, similar to removing a product.
